[1.8.0.3] 1) 提供readonly支持，默认false  2) 提供config get支持。 3) 支持动态变更server.allow, server.deny.  4) fix config del方法的bug。 5) 调整tools/ssdb-cli.cpy的config功能展示问题

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+* 1.8.0.3
+	* New features:
+		- Support "config get" command, for example: config get server.timeout
+		- Support readonly config, default is false.
+		- Support dynamic config: server.allow and server.deny
+
 * 1.8.0
 	* New features:
 		- Support SSDB style keys command through redis-cli(2014-12-08)
