--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* 1.8.0.4
+	* New features:
+		- Support slow log
+		- Change the output style of info cmd
+
 * 1.8.0.3
 	* New features:
 		- Support "config get" command, for example: config get server.timeout
