--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+* 1.8.0.5
+	* New features:
+		- Optimization ssdb-bench
+		- Optimization ssdb-cli
+		- Remove the limit of password
+		- Add Command: config get *
+		- Add Command: config set server.auth ""
+		- Fix slow_log bug
+
 * 1.8.0.4
 	* New features:
 		- Support slow log
