调整config get功能；增加启动时间的统计项；slaveof的传参进行验证和bug fix; 还有一些内部bug和细节优化

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+* 1.8.0.6
+	* New features:
+		- Change feature: config get *
+		- Add Command: repli get_offset
+		- Add Stats: uptime_in_seconds
+		- FIX BUG: slaveof bug, and check the format of param
+		- FIX BUG: ZUNIONSTORE and ZINNERSTORE, param weight => weights
+		- FIX BUG: memory leak when the output is out of limit
+
 * 1.8.0.5
 	* New features:
 		- Optimization ssdb-bench
