[1.8.0.7] 1) 增加定时fsync的支持。 2) 增加binlog compact的支持。3) 增加binlog的leveldb.stats支持。4)fix uptime的bug。5) fix config get param的bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+* 1.8.0.7
+	* New features:
+		- Support fsync_period
+		- Fix uptime bug
+		- Fix "config get param" bug, output default value when the config not exit
+		- Support binlog leveldb.stats, Support binlog compact
+
 * 1.8.0.6
 	* New features:
 		- Change feature: config get *
