--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* 1.8.0.8
+	* New features:
+		- Fix ssdb-dump bug
+		- Change command repli
+
 * 1.8.0.7
 	* New features:
 		- Support fsync_period
