1）Fix  TTL 的bug：当从变为主的时候，有可能老的到期的记录无法被删除。 以及当正常主从服务的时候，如果从重启了，可能导致主从都在做ttl的剔除从而导致binlog_seq不一致、以及数据不一致的问题。 2）增加server.role的配置，配置为：master 或者 slave。   3） 增加定期compact的功能。   4）优化redis scan/sscan/hscan/zscan 对于match pattern的处理。  5）增加统计项：last_compact, role, binlog_size

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+* 1.8.0.10
+	* New features:
+		- Fix TTL bug
+		- Add Node Role support
+		- Add stats item
+		- Add Timer for compact
+		- Optimization redis scan/hscan/sscan/zscan match pattern
+
 * 1.8.0.9
 	* New features:
 		- Fix ssdb-dump hset bug
